syntax = "proto3";

package callbackpb;

option go_package = "./pb";

// 插件请求查询 host 信息
message HostInfoRequest {
  uint32 host_id = 1;
}

message HostInfoResponse {
  uint32 host_id = 1;
  string hostname = 2;
}

// 插件请求执行命令
message CommandRequest {
  uint32 host_id = 1;
  string command = 2;
}

message CommandResponse {
  int32 exit_code = 1;
  string stdout = 2;
  string stderr = 3;
}

service CenterCallback {
  rpc GetHostInfo(HostInfoRequest) returns (HostInfoResponse);
  rpc ExecuteCommand(CommandRequest) returns (CommandResponse);
}
